Finite difference tutorial C code: do it the correct way

--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -195,121 +195,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"finite_diff_tutorial-second_deriv.h\"\n",
-      "#include \"stdio.h\"\n",
-      "#include \"stdlib.h\"\n",
-      "#include \"math.h\"\n",
-      "#define IDX2(gf, i) ( (i) + N * (gf) )\n",
-      "#define PHIGF    0\n",
-      "#define OUTPUTGF 1\n",
-      "double x(const double x_0,const int i,const double Delta_x) { return x_0 + (double)i*Delta_x; }\n",
-      "double f(const double x) { return sin(x); }\n",
-      "double f_dDD_exact(const double x) { return -sin(x); }\n",
-      "void f_dDD_FD(double *in_gfs,const int i0,const int N,const double invdx0)  {\n",
-      "#include \"finite_diff_tutorial-second_deriv.h\"\n",
-      "}\n",
-      "int main(int argc,char *argv[]) {\n",
-      "    const int N = 4+1;\n",
-      "    const int i0 = N/2 + 1;\n",
-      "    const double PI = 3.14159265358979323846264338327950288;\n",
-      "    const double Delta_x = 0.05*(2*PI);\n",
-      "    const double invdx0 = 1.0/Delta_x;\n",
-      "    const double x_0 = PI/2.0;\n",
-      "    double *in_gfs = (double *)malloc(sizeof(double)*N*2);\n",
-      "    for(int i0=0; i0<N; i0++) {\n",
-      "        in_gfs[IDX2(PHIGF, i0)] = f(x(x_0,i0,Delta_x));\n",
-      "    } // END LOOP: for(int i0=0; i0<N; i0++)\n",
-      "    f_dDD_FD(in_gfs,i0,N,invdx0);\n",
-      "    double xx = x(x_0,i0,Delta_x);\n",
-      "    double FD = in_gfs[IDX2(OUTPUTGF,i0)];\n",
-      "    double EX = f_dDD_exact(xx);\n",
-      "    printf(\"finite difference derivative partial_x^2 sin(x), evaluated at x=%.15e is:\\n\\t%.15e\\n\",xx,FD);\n",
-      "    printf(\"Exact value is:\\n\\t%.15e\\n\",EX);\n",
-      "    printf(\"Relative error:\\t%.15e\\n\",fabs((EX-FD)/(EX)));\n",
-      "    free(in_gfs);\n",
-      "    return 0;\n",
-      "}\n",
-      "\n",
-      "finite difference derivative partial_x^2 sin(x), evaluated at x=2.513274122871834e+00 is:\n",
-      "\t-5.877221929602739e-01\n",
-      "Exact value is:\n",
-      "\t-5.877852522924732e-01\n",
-      "Relative error:\t1.072829438189488e-04\n"
+      "Overwriting \"finite_difference_test.c\"\n"
      ]
     }
    ],
    "source": [
-    "import loop as loop\n",
-    "import sys as sys\n",
+    "%%writefile \"finite_difference_test.c\"\n",
     "\n",
-    "tabprefix = \"\"\n",
-    "def C(str):\n",
-    "    return tabprefix + str + \"\\n\"\n",
+    "// Part P1: S\n",
+    "#include \"stdio.h\"\n",
+    "#include \"stdlib.h\"\n",
+    "#include \"math.h\"\n",
     "\n",
-    "# Part P1: Include needed header files\n",
-    "cout  = C('#include \"stdio.h\"')\n",
-    "cout += C('#include \"stdlib.h\"')\n",
-    "cout += C('#include \"math.h\"')\n",
-    "# Part P2: Declare the \n",
-    "cout += C('#define IDX2(gf, i) ( (i) + N * (gf) )')\n",
-    "cout += C('#define PHIGF    0')\n",
-    "cout += C('#define OUTPUTGF 1')\n",
+    "// Part P2: Declare the IDX2(gf,i) macro, which enables us to store 2-dimensions of\n",
+    "//          data in a 1D array. In this case, consecutive values of \"i\" \n",
+    "//          (\"gf\" held to a fixed value) are consecutive in memory, where \n",
+    "//          consecutive values of \"gf\" (fixing \"i\") are separated by N elements in\n",
+    "//          memory.\n",
+    "#define IDX2(gf, i) ( (i) + N * (gf) )\n",
     "\n",
-    "cout += C('double x(const double x_0,const int i,const double Delta_x) { return x_0 + (double)i*Delta_x; }')\n",
+    "// Part P3: Set PHIGF and OUTPUTGF to macros\n",
+    "#define PHIGF    0\n",
+    "#define OUTPUTGF 1\n",
     "\n",
-    "cout += C('double f(const double x) { return sin(x); }')\n",
-    "cout += C('double f_dDD_exact(const double x) { return -sin(x); }')\n",
+    "double x(const double x_0,const int i,const double Delta_x) { \n",
+    "    return x_0 + (double)i*Delta_x; \n",
+    "}\n",
     "\n",
-    "cout += C('void f_dDD_FD(double *in_gfs,const int i0,const int N,const double invdx0)  {')\n",
-    "fin.FD_outputC(\"finite_diff_tutorial-second_deriv.h\",lhrh(lhs=gri.gfaccess(\"in_gfs\",\"output\"),rhs=output))\n",
-    "cout += C('#include \"finite_diff_tutorial-second_deriv.h\"')\n",
-    "cout += C('}')\n",
+    "double f(const double x) { \n",
+    "    return sin(x); \n",
+    "}\n",
+    "double f_dDD_exact(const double x) { return -sin(x); }\n",
     "\n",
-    "cout += C('int main(int argc,char *argv[]) {')\n",
-    "tabprefix = \"    \"\n",
-    "cout += C('const int N = '+str(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\"))+'+1;')\n",
-    "cout += C('const int i0 = N/2 + 1;')\n",
-    "cout += C('const double PI = 3.14159265358979323846264338327950288;')\n",
-    "cout += C('const double Delta_x = 0.05*(2*PI);')\n",
-    "cout += C('const double invdx0 = 1.0/Delta_x;')\n",
-    "cout += C('const double x_0 = PI/2.0;')\n",
+    "void f_dDD_FD(double *in_gfs,const int i0,const int N,const double invdx0)  {\n",
+    "//fin.FD_outputC(\"finite_diff_tutorial-second_deriv.h\",lhrh(lhs=gri.gfaccess(\"in_gfs\",\"output\"),rhs=output))\n",
+    "#include \"finite_diff_tutorial-second_deriv.h\"\n",
+    "}\n",
     "\n",
-    "# Allocate space for two gridfunctions\n",
-    "cout += C('double *in_gfs = (double *)malloc(sizeof(double)*N*2);')\n",
+    "int main(int argc,char *argv[]) {\n",
+    "    const int N = '+str(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\"))+'+1;\n",
+    "    const int i0 = N/2 + 1;\n",
+    "    const double PI = 3.14159265358979323846264338327950288;\n",
+    "    const double Delta_x = 0.05*(2*PI);\n",
+    "    const double invdx0 = 1.0/Delta_x;\n",
+    "    const double x_0 = PI/2.0;\n",
     "\n",
-    "# Set phi to be f(x) as defined in the f(const double x) function above, where x_i = x_0 + i*Delta_x:\n",
-    "phiset = 'in_gfs[IDX2(PHIGF, i0)] = f(x(x_0,i0,Delta_x));'\n",
-    "cout += loop.loop(\"i0\",\"0\",\"N\",\"1\",\"\", tabprefix,phiset)\n",
+    "    // Allocate space for two gridfunctions\n",
+    "    double *in_gfs = (double *)malloc(sizeof(double)*N*2);\n",
     "\n",
-    "cout += C('f_dDD_FD(in_gfs,i0,N,invdx0);')\n",
+    "    // Set phi to be f(x) as defined in the f(const double x) function above, where x_i = x_0 + i*Delta_x:\n",
+    "    for(int i0=0;i<N;i++) {\n",
+    "        in_gfs[IDX2(PHIGF, i0)] = f(x(x_0,i0,Delta_x));\n",
+    "    }\n",
     "\n",
-    "cout += C('double xx = x(x_0,i0,Delta_x);')\n",
-    "cout += C('double FD = in_gfs[IDX2(OUTPUTGF,i0)];')\n",
-    "cout += C('double EX = f_dDD_exact(xx);')\n",
-    "cout += C('printf(\"finite difference derivative partial_x^2 sin(x), evaluated at x=%.15e is:\\\\n\\\\t%.15e\\\\n\",xx,FD);')\n",
-    "cout += C('printf(\"Exact value is:\\\\n\\\\t%.15e\\\\n\",EX);')\n",
-    "cout += C('printf(\"Relative error:\\\\t%.15e\\\\n\",fabs((EX-FD)/(EX)));')\n",
+    "    f_dDD_FD(in_gfs,i0,N,invdx0);\n",
     "\n",
-    "cout += C('free(in_gfs);')\n",
+    "    double xx = x(x_0,i0,Delta_x);\n",
+    "    double FD = in_gfs[IDX2(OUTPUTGF,i0)];\n",
+    "    double EX = f_dDD_exact(xx);\n",
+    "    printf(\"finite difference derivative partial_x^2 sin(x), evaluated at x=%.15e is:\\\\n\\\\t%.15e\\\\n\",xx,FD);\n",
+    "    printf(\"Exact value is:\\\\n\\\\t%.15e\\\\n\",EX);\n",
+    "    printf(\"Relative error:\\\\t%.15e\\\\n\",fabs((EX-FD)/(EX)));\n",
     "\n",
-    "cout += C('return 0;')\n",
-    "tabprefix = \"\"\n",
+    "    // Free space\n",
+    "    free(in_gfs);\n",
     "\n",
-    "cout += C('}')\n",
-    "print(cout)\n",
-    "\n",
-    "with open(\"finite_difference_test.c\", \"w\") as C_file_output:\n",
-    "    C_file_output.write(cout)\n",
+    "    return 0;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finite difference derivative partial_x^2 sin(x), evaluated at x=2.268928027592628e+00 is:\r\n",
+      "\t-7.660365665005484e-01\r\n",
+      "Exact value is:\r\n",
+      "\t-7.660444431189780e-01\r\n",
+      "Relative error:\t1.028219511329282e-05\r\n"
+     ]
+    }
+   ],
+   "source": [
     "!gcc -std=gnu99 finite_difference_test.c -o finite_difference_test -lm\n",
     "!./finite_difference_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
