FD tut: improve some of the language

--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -23,11 +23,11 @@
     "\n",
     "$$u(x_i) = u_i.$$\n",
     "\n",
-    "We wish to approximate derivatives of $u_i$ at some nearby point (first we will consider derivatives at $x_i$ itself) using [finite difference](https://en.wikipedia.org/wiki/Finite_difference). (FD) techniques. \n",
+    "We wish to approximate derivatives of $u_i$ at some nearby point (in this tutorial, we will consider derivatives at one of the sampled points $x_i$) using [finite difference](https://en.wikipedia.org/wiki/Finite_difference). (FD) techniques. \n",
     "\n",
     "FD techniques are usually equivalent to first finding the unique $N$th degree polynomial that passes through $N+1$ sampled points of our function ($u$) in the neighborhood of where we wish to find the derivative. Then, provided $u$ is smooth and properly-sampled, the $M$th derivative of the polynomial (where $M\\le N-1$; *Exercise: Justify this inequality*) is an approximate $M$th derivative of $u$ called the *$M$th-order finite difference derivative*. The approximation error generally decreases as the polynomial degree or sampling density increases.\n",
     "\n",
-    "Finite difference derivatives are written in the form\n",
+    "The $n$th finite difference derivative of $u(x)$ at $x=x_i$ can then be written in the form\n",
     "$$u^{(n)}(x_i)_{\\text{FD}} = \\sum_{j} u_j a_j,$$\n",
     "where the $a_j$'s are known as *finite difference coefficients*. For a given finite difference representation, the set of $a_j$'s are unique.\n",
     "\n",
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting finite_difference_playground.c\n"
+      "Writing finite_difference_playground.c\n"
      ]
     }
    ],
