--- a/Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb
+++ b/Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb
@@ -21,40 +21,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example: Centered Finite Difference Representation of $u'(x_i) = u'_i$ Accurate to Fourth-order in $\\Delta x$\n",
+    "## Example: Centered Finite Difference Representation of $u'(x_0) = u'_0$ Accurate to Fourth-order in $\\Delta x$\n",
     "\n",
-    "As an illustration, let's first derive for uniform grids the centered, first-order, finite-difference coefficients accurate to fourth-order in $\\Delta x$. A fourth-order-accurate centered finite-difference derivative is equivalent to the derivative of the unique polynomial fit at sampled points $\\left\\{j-2,j-1,j,j+1,j+2\\right\\}$. \n",
+    "As an illustration, let's first derive for uniform grids the centered, first-order, finite-difference coefficients accurate to fourth-order in $\\Delta x$. The fourth-order-accurate, uniformly sampled, centered finite-difference derivative $u'(x_0)$ is equivalent to the derivative of the unique polynomial that passes through $u(x)$ at sampled points $\\left\\{ x_{-2},x_{-1},x_{0},x_{1},x_{2} \\right\\}$, where $x_i=x_0 + i \\Delta x$.\n",
     "\n",
-    "The Taylor series expansion of a function $f(x)$ about a point $x_0$ is given by\n",
+    "The Taylor series expansion of a function $u(x)$ about a point $x_0$ is given by\n",
     "\n",
-    "$$f(x) = \\sum_{n=0}^\\infty \\frac{f^{(n)}(x_0)}{n!} (x-x_0)^n,$$\n",
+    "$$u(x) = \\sum_{n=0}^\\infty \\frac{u^{(n)}(x_0)}{n!} (x-x_0)^n,$$\n",
     "\n",
-    "where $f^{(n)}(x_0)$ is the $n$th derivative of $f$ evaluated at point $x_0$. Based on this, we can immediately write the Taylor expansion of $f$ at a point $x=x_0+j\\Delta x$. In this case,\n",
+    "where $u^{(n)}(x_0)$ is the $n$th derivative of $u$ evaluated at point $x_0$. Based on this, we can immediately write the Taylor expansion of $f$ at a point $x=x_0+j\\Delta x$. In this case,\n",
     "\n",
     "\\begin{align}\n",
-    "f(x_0+j\\Delta x) &= \\sum_{n=0}^\\infty \\frac{f^{(n)}(x_0)}{n!} (j\\Delta x)^n,\\text{ or equivalently:} \\\\\n",
-    "f_j &= \\sum_{n=0}^\\infty \\frac{f^{(n)}_j}{n!} (j\\Delta x)^n.\n",
+    "u(x_0+j\\Delta x) &= \\sum_{n=0}^\\infty \\frac{u^{(n)}(x_0)}{n!} (j\\Delta x)^n,\\text{ or equivalently:} \\\\\n",
+    "u_j &= \\sum_{n=0}^\\infty \\frac{u^{(n)}_0}{n!} (j\\Delta x)^n.\n",
     "\\end{align}\n",
     "\n",
-    "Thus Taylor expanding $u(x_i)$ about the sampled points $i\\in \\left\\{j-2,j-1,j,j+1,j+2\\right\\}$ to $n=5$ yields the following:\n",
+    "Our goal is to compute $u^{(1)}(x_0)=u'_0$ at some point $x_0$, with a dominant error term proportional to $(\\Delta x)^4$. We accomplish this by Taylor expanding $u(x_j)$ about $x=x_0$ for $j\\in \\left\\{-2,-1,0,1,2\\right\\}$, each up to the $n=5$ term:\n",
     "\n",
     "\\begin{align}\n",
-    "u_{j-2} &= u_j - (2 \\Delta x) u'_j + \\frac{(2 \\Delta x)^2}{2} u''_j - \\frac{(2 \\Delta x)^3}{3!} u'''_j + \\frac{(2 \\Delta x)^4}{4!} u^{(4)}_j +\\mathcal{O}\\left((\\Delta x)^5\\right) \\\\\n",
-    "u_{j-1} &= u_j - (\\Delta x) u'_j + \\frac{(\\Delta x)^2}{2} u''_j - \\frac{(\\Delta x)^3}{3!} u'''_j + \\frac{(\\Delta x)^4}{4!} u^{(4)}_j +\\mathcal{O}\\left((\\Delta x)^5\\right)\\\\\n",
-    "u_{j} &= u_j \\\\\n",
-    "u_{j+1} &= u_j + (\\Delta x) u'_j + \\frac{(\\Delta x)^2}{2} u''_j + \\frac{(\\Delta x)^3}{3!} u'''_j + \\frac{(\\Delta x)^4}{4!} u^{(4)}_j +\\mathcal{O}\\left((\\Delta x)^5\\right)\\\\\n",
-    "u_{j+2} &= u_j + (2 \\Delta x) u'_j + \\frac{(2 \\Delta x)^2}{2} u''_j + \\frac{(2 \\Delta x)^3}{3!} u'''_j + \\frac{(2 \\Delta x)^4}{4!} u^{(4)}_j +\\mathcal{O}\\left((\\Delta x)^5\\right)\\\\\n",
+    "u_{-2} &= u_0 - (2 \\Delta x) u'_0 + \\frac{(2 \\Delta x)^2}{2} u''_0 - \\frac{(2 \\Delta x)^3}{3!} u'''_0 + \\frac{(2 \\Delta x)^4}{4!} u^{(4)}_0 +\\mathcal{O}\\left((\\Delta x)^5\\right) \\\\\n",
+    "u_{-1} &= u_0 - (\\Delta x) u'_0 + \\frac{(\\Delta x)^2}{2} u''_0 - \\frac{(\\Delta x)^3}{3!} u'''_0 + \\frac{(\\Delta x)^4}{4!} u^{(4)}_0 +\\mathcal{O}\\left((\\Delta x)^5\\right)\\\\\n",
+    "u_{0} &= u_0 \\\\\n",
+    "u_{1} &= u_0 + (\\Delta x) u'_0 + \\frac{(\\Delta x)^2}{2} u''_0 + \\frac{(\\Delta x)^3}{3!} u'''_0 + \\frac{(\\Delta x)^4}{4!} u^{(4)}_0 +\\mathcal{O}\\left((\\Delta x)^5\\right)\\\\\n",
+    "u_{2} &= u_0 + (2 \\Delta x) u'_0 + \\frac{(2 \\Delta x)^2}{2} u''_0 + \\frac{(2 \\Delta x)^3}{3!} u'''_0 + \\frac{(2 \\Delta x)^4}{4!} u^{(4)}_0 +\\mathcal{O}\\left((\\Delta x)^5\\right)\\\\\n",
     "\\end{align}\n",
     "\n",
-    "Our goal is to compute coefficients $a_j$ such that $(a_{j-2} u_{j-2} + a_{j-1} u_{j-1}...)/(\\Delta x) = u'_j + \\mathcal{O}\\left((\\Delta x)^4\\right)$. So we get\n",
+    "Let's combine the above equations to find coefficients $a_j$ such that $(a_{-2} u_{-2} + a_{-1} u_{-1}...)/(\\Delta x) = u'_0 + \\mathcal{O}\\left((\\Delta x)^4\\right)$:\n",
     "\n",
     "\\begin{align}\n",
-    "& (a_{j-2} u_{j-2} + a_{j-1} u_{j-1} + a_j u_j + a_{j+1} u_{j+1} +a_{j+2} u_{j+2})/(\\Delta x) \\\\\n",
-    "= & \\left( u_j - (2 \\Delta x) u'_j + \\frac{(2 \\Delta x)^2}{2} u''_j -\\frac{(2 \\Delta x)^3}{3!} u'''_j+\\frac{(2 \\Delta x)^4}{4!} u^{(4)}_j \\right) a_{j-2} \\\\\n",
-    "& + \\left( u_j - (\\Delta x) u'_j + \\frac{(\\Delta x)^2}{2} u''_j - \\frac{(\\Delta x)^3}{3!} u'''_j+\\frac{(\\Delta x)^4}{4!} u^{(4)}_j \\right) a_{j-1} \\\\\n",
-    "& + \\left( u_j \\right) a_{j} \\\\\n",
-    "& + \\left( u_j + (\\Delta x) u'_j + \\frac{(\\Delta x)^2}{2} u''_j + \\frac{(\\Delta x)^3}{3!} u'''_j+\\frac{(\\Delta x)^4}{4!} u^{(4)}_j \\right) a_{j+1} \\\\\n",
-    "& + \\left( u_j + (2 \\Delta x) u'_j + \\frac{(2 \\Delta x)^2}{2} u''_j + \\frac{(2 \\Delta x)^3}{3!} u'''_j+\\frac{(2 \\Delta x)^4}{4!} u^{(4)}_j \\right) a_{j+2}\n",
+    "& (a_{-2} u_{-2} + a_{-1} u_{-1} + a_0 u_0 + a_{1} u_{1} +a_{2} u_{2})/(\\Delta x) \\\\\n",
+    "= & \\left( u_0 - (2 \\Delta x) u'_0 + \\frac{(2 \\Delta x)^2}{2} u''_0 -\\frac{(2 \\Delta x)^3}{3!} u'''_0+\\frac{(2 \\Delta x)^4}{4!} u^{(4)}_0 \\right) a_{-2} \\\\\n",
+    "& + \\left( u_0 - (\\Delta x) u'_0 + \\frac{(\\Delta x)^2}{2} u''_0 - \\frac{(\\Delta x)^3}{3!} u'''_0+\\frac{(\\Delta x)^4}{4!} u^{(4)}_0 \\right) a_{-1} \\\\\n",
+    "& + \\left( u_0 \\right) a_{0} \\\\\n",
+    "& + \\left( u_0 + (\\Delta x) u'_0 + \\frac{(\\Delta x)^2}{2} u''_0 + \\frac{(\\Delta x)^3}{3!} u'''_0+\\frac{(\\Delta x)^4}{4!} u^{(4)}_0 \\right) a_{1} \\\\\n",
+    "& + \\left( u_0 + (2 \\Delta x) u'_0 + \\frac{(2 \\Delta x)^2}{2} u''_0 + \\frac{(2 \\Delta x)^3}{3!} u'''_0+\\frac{(2 \\Delta x)^4}{4!} u^{(4)}_0 \\right) a_{2}\n",
     "\\end{align}\n",
     "\n",
     "First notice that each time we take a derivative in the Taylor\n",
@@ -64,23 +64,23 @@
     "rearrange terms:\n",
     "\n",
     "\\begin{align}\n",
-    "& a_{j-2} u_{j-2} + a_{j-1} u_{j-1} + a_j u_j + a_{j+1} u_{j+1} + a_{j+2} u_{j+2} \\\\\n",
-    "= & \\left( a_{j-2} + a_{j-1} + a_j + a_{j+1} + a_{j+2} \\right) u_j \\\\\n",
-    "& + \\left( -2 a_{j-2} - a_{j-1} + a_{j+1} + 2 a_{j+2} \\right) u'_j \\\\\n",
-    "& + \\left( 2^2 a_{j-2} + a_{j-1} + a_{j+1} + 2^2 a_{j+2} \\right)/2! u''_j \\\\\n",
-    "& + \\left( -2^3 a_{j-2} - a_{j-1} + a_{j+1} + 2^3 a_{j+2} \\right)/3! u'''_j \\\\\n",
-    "= & u'_j\n",
+    "& a_{-2} u_{-2} + a_{-1} u_{-1} + a_0 u_0 + a_{1} u_{1} + a_{2} u_{2} \\\\\n",
+    "& = \\left( a_{-2} + a_{-1} + a_0 + a_{1} + a_{2} \\right) \\times u_0 \\\\\n",
+    "& + \\left( -2 a_{-2} - a_{-1} + a_{1} + 2 a_{2} \\right) \\times u'_0 \\\\\n",
+    "& + \\left( 2^2 a_{-2} + a_{-1} + a_{1} + 2^2 a_{2} \\right)/2! \\times u''_0 \\\\\n",
+    "& + \\left( -2^3 a_{-2} - a_{-1} + a_{1} + 2^3 a_{2} \\right)/3! \\times u'''_0 \\\\\n",
+    "= & u'_0\n",
     "\\end{align}\n",
     "\n",
     "In order for the above to hold true for any nonzero values of\n",
-    "$\\left\\{ u_j,u'_j,u''_j,u'''_j,u^{(4)}_j\\right\\}$, the following set\n",
+    "$\\left\\{ u_0,u'_0,u''_0,u'''_0,u^{(4)}_0\\right\\}$, the following set\n",
     "of equations must also hold:\n",
     "\\begin{align}\n",
-    "0 &= a_{j-2} + a_{j-1} + a_j + a_{j+1} + a_{j+2}\\\\\n",
-    "1 &= -2 a_{j-2} - a_{j-1} + a_{j+1} + 2 a_{j+2}\\\\\n",
-    "0 \\times 2! &= 2^2 a_{j-2} + a_{j-1} + a_{j+1} + 2^2 a_{j+2}\\\\\n",
-    "0 \\times 3! &= -2^3 a_{j-2} - a_{j-1} + a_{j+1} + 2^3 a_{j+2} \\\\\n",
-    "0 \\times 4! &= 2^4 a_{j-2} + a_{j-1} + a_{j+1} + 2^3 a_{j+2}.\n",
+    "0 &= a_{-2} + a_{-1} + a_0 + a_{1} + a_{2}\\\\\n",
+    "1 &= -2 a_{-2} - a_{-1} + a_{1} + 2 a_{2}\\\\\n",
+    "0 \\times 2! &= 2^2 a_{-2} + a_{-1} + a_{1} + 2^2 a_{2}\\\\\n",
+    "0 \\times 3! &= -2^3 a_{-2} - a_{-1} + a_{1} + 2^3 a_{2} \\\\\n",
+    "0 \\times 4! &= 2^4 a_{-2} + a_{-1} + a_{1} + 2^3 a_{2}.\n",
     "\\end{align}\n",
     "\n",
     "Now we write this expression in matrix form (note that $0!=1$):\n",
@@ -106,11 +106,11 @@
     "\\right)\n",
     "\\left(\n",
     "\\begin{array}{c}\n",
-    "a_{j-2} \\\\\n",
-    "a_{j-1} \\\\\n",
-    "a_{j} \\\\\n",
-    "a_{j+1} \\\\\n",
-    "a_{j+2} \\\\\n",
+    "a_{-2} \\\\\n",
+    "a_{-1} \\\\\n",
+    "a_{0} \\\\\n",
+    "a_{1} \\\\\n",
+    "a_{2} \\\\\n",
     "\\end{array}\n",
     "\\right)\n",
     "\\end{equation}\n",
@@ -135,23 +135,23 @@
     "\\end{equation}\n",
     "\n",
     "The coefficients for the $M$th derivative can be immediately read by\n",
-    "multiplying the $(M+1)$st column by $M!/(\\Delta x)^M$. For example, the zeroth derivative at point $i$ is given by \n",
+    "multiplying the $(M+1)$st column by $M!/(\\Delta x)^M$. For example, the zeroth derivative at point $x_0$ is given by \n",
     "\n",
-    "$$\\frac{0!}{(\\Delta x)^0} \\times (0 u_{i-2} + 0 u_{i-1} + u_i + 0 u_{i+1} + 0 u_{i+2}) = u_i,$$\n",
+    "$$\\frac{0!}{(\\Delta x)^0} \\times (0 u_{-2} + 0 u_{-1} + u_0 + 0 u_{1} + 0 u_{2}) = u_0,$$\n",
     "\n",
-    "which is exact. The first derivative finite difference approximation at point $i$ is given by\n",
+    "which is exact. The first derivative finite difference approximation at point $x_0$ is given by\n",
     "\n",
-    "$$\\frac{1!}{(\\Delta x)^1} \\times \\left(\\frac{1}{12}( u_{i-2} - u_{i+2}) + \\frac{2}{3}( -u_{i-1} + u_{i+1})\\right) \\approx (\\partial_x u)_i,$$\n",
+    "$$\\frac{1!}{(\\Delta x)^1} \\times \\left(\\frac{1}{12}( u_{-2} - u_{2}) + \\frac{2}{3}( -u_{-1} + u_{1})\\right) \\approx (\\partial_x u)_0,$$\n",
     "\n",
-    "and the second derivative finite difference approximation at point $i$ is given by \n",
+    "and the second derivative finite difference approximation at point $x_0$ is given by \n",
     "\n",
-    "$$\\frac{2!}{(\\Delta x)^2} \\times \\left(-\\frac{1}{24}(u_{i-2} + u_{i+2}) + \\frac{2}{3}(u_{i-1} + u_{i+1}) - \\frac{5}{4} u_i \\right) \\approx (\\partial_x^2 u)_i,$$\n",
+    "$$\\frac{2!}{(\\Delta x)^2} \\times \\left(-\\frac{1}{24}(u_{-2} + u_{2}) + \\frac{2}{3}(u_{-1} + u_{1}) - \\frac{5}{4} u_0 \\right) \\approx (\\partial_x^2 u)_0,$$\n",
     "\n",
     "In short, this matrix yields the finite difference derivative coefficients with the lowest possible error given a stencil size of 5 gridpoints. It can be shown by analyzing cancellations in higher order terms of the Taylor series expansions that the first and second derivative coefficients are correct to $(\\Delta x)^4$ and third and fourth derivatives are correct to $(\\Delta x)^2$. \n",
     "\n",
     "### Exercise 1: Find the exact expressions for the dominant error term on all derivatives that can be computed from this matrix (zeroth through fourth derivatives).\n",
     "\n",
-    "### Exercise 2: Construct the matrix whose inverse yields the 5-point stencil *upwinded* derivative coefficients (i.e., the stencil includes points $\\{u_{i-4},u_{i-3},u_{i-2},u_{i-1},u_{i}\\}$).\n",
+    "### Exercise 2: Construct the matrix whose inverse yields the 5-point stencil *upwinded* derivative coefficients (i.e., the stencil includes points $\\{u_{-4},u_{-3},u_{-2},u_{-1},u_{0}\\}$).\n",
     "\n",
     "NRPy+ implements this simple matrix inversion strategy to evaluate finite difference coefficients."
    ]
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
