--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -92,9 +92,9 @@
    "source": [
     "Interpreting the output, notice first that $\\texttt{fdstencl}$ is a list of coordinate indices, where up to 4 dimension indices are supported (higher dimensions are possible and can be straightforwardly added, though be warned about [The Curse of Dimensionality](https://en.wikipedia.org/wiki/Curse_of_dimensionality)).\n",
     "\n",
-    "Thus NRPy+ found that for some function $u$, the fourth-order accurate finite difference operator is given by\n",
+    "Thus NRPy+ found that for some function $u$, the fourth-order accurate finite difference operator at point $x_{i0}$ is given by\n",
     "\n",
-    "$$[\\partial_x u]_\\text{FD4} = \\frac{1}{\\Delta x} \\left[ \\frac{1}{12} \\left(u_{i0-2,i1,i2,i3} - u_{i0+2,i1,i2,i3}\\right) + \\frac{2}{3} \\left(-u_{i0-1,i1,i2,i3} + u_{i0+1,i1,i2,i3}\\right)\\right]$$\n",
+    "$$[\\partial_x u]^\\text{FD4}_{i0} = \\frac{1}{\\Delta x} \\left[ \\frac{1}{12} \\left(u_{i0-2,i1,i2,i3} - u_{i0+2,i1,i2,i3}\\right) + \\frac{2}{3} \\left(-u_{i0-1,i1,i2,i3} + u_{i0+1,i1,i2,i3}\\right)\\right]$$\n",
     "\n",
     "Notice also that multiplying by the appropriate power of $\\frac{1}{\\Delta x}$ term is up to the user of this function.\n",
     "\n",
@@ -396,11 +396,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A quick glance at the above plot indicates that between $\\log_{10}(\\Delta x) \\approx -2.0$ and $\\log_{10}(\\Delta x) \\approx -1.0$, the logarithmic relative error $\\log_{10} E_{\\rm Rel}$ increases by about 4, indicating that indeed we have confirmed fourth-order convergence.\n",
+    "A quick glance at the above plot indicates that between $\\log_{10}(\\Delta x) \\approx -2.0$ and $\\log_{10}(\\Delta x) \\approx -1.0$, the logarithmic relative error $\\log_{10} E_{\\rm Rel}$ increases by about 4, indicating a positive slope of approximately 4. Thus we have confirmed fourth-order convergence.\n",
     "\n",
     "### Exercises to students:\n",
     "* Use NumPy's [polyfit() function](https://docs.scipy.org/doc/numpy/reference/generated/numpy.polyfit.html) to evaluate the least-squares slope of the above line.\n",
-    "* Explore $\\log_{10}(\\Delta x)$ outside the above (truncation-error-dominated) range. What other errors dominate outside the truncation-error-dominated regime?"
+    "* Explore $\\log_{10}(\\Delta x)$ outside the above (truncation-error-dominated) range. What other errors dominate outside the truncation-error-dominated regime?\n",
+    "* Adjust the above NRPy+ and C codes to support 6th-order-accurate finite differencing. What should the slope of the resulting plot of $\\log_{10} E_{\\rm Rel}$ versus $\\log_{10}(\\Delta x)$ be? Explain why this case does not provide as clean a slope as the 4th-order case."
    ]
   }
  ],
