--- a/NRPy+_Tutorial.ipynb
+++ b/NRPy+_Tutorial.ipynb
@@ -33,7 +33,7 @@
     "+ #### [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ #### [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
     "    + #### [*Instructional module*: How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
-    "+ #### End-to-End Example: [Finite-Difference Playground: Fully Functional C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Finite_Difference_Playground.ipynb)\n",
+    "+ #### End-to-End Example: [Finite-Difference Playground: A Complete C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Finite_Difference_Playground.ipynb)\n",
     "+ #### Application: [The Scalar Wave Equation in Cartesian Coordinates](Tutorial-ScalarWave.ipynb)\n",
     "\n",
     "#### (READ SECOND, IN ORDER) Reference Metrics and the Scalar Wave Equation in Curvilinear Coordinates\n",
