--- a/NRPy+_Tutorial.ipynb
+++ b/NRPy+_Tutorial.ipynb
@@ -32,9 +32,10 @@
     "+ #### [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
     "+ #### [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ #### [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
-    "    + #### [*Instructional module*: How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
-    "+ #### End-to-End Example: [Finite-Difference Playground: A Complete C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Finite_Difference_Playground.ipynb)\n",
+    "    + #### Instructional module: [How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
+    "    + #### Start-to-Finish Example: [Finite-Difference Playground: A Complete C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
     "+ #### Application: [The Scalar Wave Equation in Cartesian Coordinates](Tutorial-ScalarWave.ipynb)\n",
+    "    + #### (IN PROGRESS) Start-to-Finish Example: [Simple Scalar Wave: A Complete C Code for Solving the Scalar Wave Equation](Tutorial-Start_to_Finish-ScalarWave.ipynb)\n",
     "\n",
     "#### (READ SECOND, IN ORDER) Reference Metrics and the Scalar Wave Equation in Curvilinear Coordinates\n",
     "+ #### [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
