The ETK thorn compiles successfully from the symlinked directory.

--- a/Tutorial-WeylScalars-Cartesian.ipynb
+++ b/Tutorial-WeylScalars-Cartesian.ipynb
@@ -456,7 +456,7 @@
     "\n",
     "!mkdir WeylScal4NRPy\n",
     "!mkdir WeylScal4NRPy/src\n",
-    "fin.FD_outputC(\"WeylScal4NRPy/WeylScal4_NRPy.h\",lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=psi4r_rhs))"
+    "fin.FD_outputC(\"WeylScal4NRPy/WeylScal4_NRPy.h\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=psi4r_rhs),lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=psi4i_rhs)])"
    ]
   },
   {
@@ -465,7 +465,7 @@
    "source": [
     "To create an Einstein Toolkit thorn to numerically compare the two codes, we will need a few more files: the scheduling, parameter, and interface .ccl files (this specific thorn does not require a configuration.ccl file). \n",
     "\n",
-    "We will start with the file $\\text{interface.ccl}$; the documentation for this is available [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2)."
+    "We will start with the file $\\text{interface.ccl}$; the documentation for this is available [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). This file governs the interaction between this thorn and others."
    ]
   },
   {
@@ -484,7 +484,7 @@
    "source": [
     "%%writefile WeylScal4NRPy/interface.ccl\n",
     "\n",
-    "implements: WeylScal4\n",
+    "implements: WeylScal4NRPy\n",
     "\n",
     "inherits:   admbase Boundary GenericFD Grid methodoflines\n",
     "\n",
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now write the file $\\text{param.ccl}$, documented [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3)."
+    "We will now write the file $\\text{param.ccl}$, documented [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). This file allows selected parameters to be set at runtime, as well as allowing other thorns to see these values."
    ]
   },
   {
@@ -514,29 +514,61 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: %%writefile is a cell magic, but the cell body is empty.\n"
+      "Overwriting WeylScal4NRPy/param.ccl\n"
      ]
     }
    ],
    "source": [
-    "%%writefile WeylScal4NRPy/param.ccl"
+    "%%writefile WeylScal4NRPy/param.ccl\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_INT WeylScal4NRPy_MaxNumEvolvedVars \"Number of evolved variables used by this thorn\" ACCUMULATOR-BASE=MethodofLines::MoL_Num_Evolved_Vars STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:0 :: \"Number of evolved variables used by this thorn\"\n",
+    "} 0\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_INT WeylScal4NRPy_MaxNumArrayEvolvedVars \"Number of Array evolved variables used by this thorn\" ACCUMULATOR-BASE=MethodofLines::MoL_Num_ArrayEvolved_Vars STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:0 :: \"Number of Array evolved variables used by this thorn\"\n",
+    "} 0\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_INT WeylScal4NRPy_calc_every \"WeylScal4_psi4_calc_Nth_calc_every\" STEERABLE=ALWAYS\n",
+    "{\n",
+    "  *:* :: \"\"\n",
+    "} 1\n",
+    "\n",
+    "restricted:\n",
+    "CCTK_INT WeylScal4NRPy_calc_offset \"WeylScal4_psi4_calc_4th_calc_offset\" STEERABLE=ALWAYS\n",
+    "{\n",
+    "  *:* :: \"\"\n",
+    "} 0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we will write the file $\\text{schedule.ccl}$, which is documented [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4)."
+    "Finally, we will write the file $\\text{schedule.ccl}$, which is documented [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4); this file dictates when the various parts of the thorn will be run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting WeylScal4NRPy/schedule.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile WeylScal4NRPy/schedule.ccl\n",
     "\n",
@@ -544,9 +576,9 @@
     "\n",
     "STORAGE: Psi4i_group[timelevels]\n",
     "\n",
-    "schedule group WeylScal4_psi4_calc_Nth_group in MoL_PseudoEvolution after ADMBase_SetADMVars\n",
+    "schedule group WeylScal4NRPy_group in MoL_PseudoEvolution after ADMBase_SetADMVars\n",
     "\n",
-    "schedule WeylScal4_psi4_calc_Nth in WeylScal4_psi4_calc_Nth_group\n",
+    "schedule WeylScal4NRPy in WeylScal4NRPy_group\n",
     "{\n",
     "  LANG: C\n",
     "  READS: admbase::kxx(Everywhere)\n",
@@ -567,6 +599,32 @@
     "  WRITES: WeylScal4::Psi4i(Interior)\n",
     "  WRITES: WeylScal4::Psi4r(Interior)\n",
     "} \"WeylScal4_psi4_calc_Nth\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also need $\\text{make.code.defn}$, which states which files need to be compiled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting WeylScal4NRPy/src/make.code.defn\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile WeylScal4NRPy/src/make.code.defn\n",
+    "\n",
+    "SRCS = WeylScal4_NRPy.c"
    ]
   },
   {
