Fix bug in finite difference code output routine. Update WeylScalars.

--- a/Tutorial-WeylScalars-Cartesian.ipynb
+++ b/Tutorial-WeylScalars-Cartesian.ipynb
@@ -436,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"WeylScal4NRPy/src/WeylScal4_NRPy.h\"\n"
+      "Wrote to file \"WeylScal4NRPy/src/WeylScal4NRPy.h\"\n"
      ]
     }
    ],
@@ -472,7 +472,8 @@
     "\n",
     "!mkdir WeylScal4NRPy     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
     "!mkdir WeylScal4NRPy/src 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "fin.FD_outputC(\"WeylScal4NRPy/src/WeylScal4_NRPy.h\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=psi4r_rhs),lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=psi4i_rhs)])"
+    "# par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
+    "fin.FD_outputC(\"WeylScal4NRPy/src/WeylScal4NRPy.h\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=psi4r_rhs),lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=psi4i_rhs)])"
    ]
   },
   {
