The new psi4 thorn now compiles without errors.

--- a/Tutorial-WeylScalars-Cartesian.ipynb
+++ b/Tutorial-WeylScalars-Cartesian.ipynb
@@ -605,7 +605,7 @@
     "{\n",
     "} \"WeylScal4NRPy\"\n",
     "\n",
-    "schedule WeylScal4NRPy in WeylScal4NRPy_group\n",
+    "schedule weylscal4_mainfunction in WeylScal4NRPy_group\n",
     "{\n",
     "  LANG: C\n",
     "  READS: admbase::kxx(Everywhere)\n",
