--- a/Tutorial-WeylScalars-Cartesian.ipynb
+++ b/Tutorial-WeylScalars-Cartesian.ipynb
@@ -508,13 +508,13 @@
     "inherits:   admbase Boundary Grid methodoflines\n",
     "\n",
     "public:\n",
-    "CCTK_REAL Psi4r_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
+    "CCTK_REAL NRPyPsi4r_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
     "{\n",
     "  psi4r\n",
     "} \"Psi4r_group\"\n",
     "\n",
     "public:\n",
-    "CCTK_REAL Psi4i_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=-1'\n",
+    "CCTK_REAL NRPyPsi4i_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=-1'\n",
     "{\n",
     "  psi4i\n",
     "} \"Psi4i_group\""
@@ -597,13 +597,13 @@
    "source": [
     "%%writefile WeylScal4NRPy/schedule.ccl\n",
     "\n",
-    "STORAGE: Psi4r_group[timelevels]\n",
+    "STORAGE: NRPyPsi4r_group[timelevels]\n",
     "\n",
-    "STORAGE: Psi4i_group[timelevels]\n",
+    "STORAGE: NRPyPsi4i_group[timelevels]\n",
     "\n",
     "schedule group WeylScal4NRPy_group in MoL_PseudoEvolution after ADMBase_SetADMVars\n",
     "{\n",
-    "} \"WeylScal4NRPy\"\n",
+    "} \"Schedule WeylScal4NRPy group\"\n",
     "\n",
     "schedule weylscal4_mainfunction in WeylScal4NRPy_group\n",
     "{\n",
@@ -625,7 +625,7 @@
     "  READS: grid::z(Everywhere)\n",
     "  WRITES: WeylScal4::psi4i(Interior)\n",
     "  WRITES: WeylScal4::psi4r(Interior)\n",
-    "} \"WeylScal4NRPy\"\n"
+    "} \"Call WeylScal4NRPy main function\"\n"
    ]
   },
   {
