--- a/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
+++ b/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
@@ -22,20 +22,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/*\n",
-      " *  Original SymPy expressions:\n",
-      " *  \"[const double phi_dDD00 = invdx0**2*(-5*phi/2 + 4*phi_i0m1/3 - phi_i0m2/12 + 4*phi_i0p1/3 - phi_i0p2/12),\n",
-      " *    out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00]\"\n",
-      " */\n",
       "{\n",
-      "   const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
-      "   const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
-      "   const double phi = in_gfs[IDX2(PHIGF, i0)];\n",
-      "   const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
-      "   const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
-      "   const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
-      "   out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
+      "    /* \n",
+      "     * Step 1 of 2: Read from main memory and compute finite difference stencils (if any):\n",
+      "     */\n",
+      "    /*\n",
+      "     *  Original SymPy expression:\n",
+      "     *  \"const double phi_dDD00 = invdx0**2*(-5*phi/2 + 4*phi_i0m1/3 - phi_i0m2/12 + 4*phi_i0p1/3 - phi_i0p2/12)\"\n",
+      "     */\n",
+      "    const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
+      "    const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
+      "    const double phi = in_gfs[IDX2(PHIGF, i0)];\n",
+      "    const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
+      "    const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
+      "    const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "    /* \n",
+      "     * Step 2 of 2: Evaluate SymPy expressions and write to main memory:\n",
+      "     */\n",
+      "    /*\n",
+      "     *  Original SymPy expression:\n",
+      "     *  \"out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00\"\n",
+      "     */\n",
+      "    out_gf[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
       "}\n",
+      "\n",
       "Wrote to file \"finite_diff_tutorial-second_deriv.h\"\n"
      ]
     }
