--- a/Tutorial-Indexed_Expressions-soln.ipynb
+++ b/Tutorial-Indexed_Expressions-soln.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,11 +16,10 @@
       " *    betaD2out = betaU0*hDD02 + betaU1*hDD12 + betaU2*hDD22]\"\n",
       " */\n",
       "{\n",
-      "   betaD0out = betaU0*hDD00 + betaU1*hDD01 + betaU2*hDD02;;\n",
-      "   betaD1out = betaU0*hDD01 + betaU1*hDD11 + betaU2*hDD12;;\n",
-      "   betaD2out = betaU0*hDD02 + betaU1*hDD12 + betaU2*hDD22;;\n",
-      "}\n",
-      "\n"
+      "   betaD0out = betaU0*hDD00 + betaU1*hDD01 + betaU2*hDD02;\n",
+      "   betaD1out = betaU0*hDD01 + betaU1*hDD11 + betaU2*hDD12;\n",
+      "   betaD2out = betaU0*hDD02 + betaU1*hDD12 + betaU2*hDD22;\n",
+      "}\n"
      ]
     }
    ],
@@ -71,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
