--- a/Tutorial-WeylScalars-Cartesian.ipynb
+++ b/Tutorial-WeylScalars-Cartesian.ipynb
@@ -725,18 +725,19 @@
     "# par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
     "if output_all_psis:\n",
     "    # Put the full FD_outputC here\n",
-    "        fin.FD_outputC(\"WeylScal4NRPy/src/WeylScal4NRPy.h\",[\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=psi4r_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=psi4i_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3r\"),rhs=psi3r_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3i\"),rhs=psi3i_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2r\"),rhs=psi2r_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2i\"),rhs=psi2i_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1r\"),rhs=psi1r_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1i\"),rhs=psi1i_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0r\"),rhs=psi0r_rhs),\\\n",
-    "                                                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0i\"),rhs=psi0i_rhs),\\\n",
-    "                                                           ])\n",
+    "        fin.FD_outputC(\"WeylScal4NRPy/src/WeylScal4NRPy.h\",\n",
+    "                       [\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=psi4r_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=psi4i_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3r\"),rhs=psi3r_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3i\"),rhs=psi3i_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2r\"),rhs=psi2r_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2i\"),rhs=psi2i_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1r\"),rhs=psi1r_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1i\"),rhs=psi1i_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0r\"),rhs=psi0r_rhs),\\\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0i\"),rhs=psi0i_rhs),\\\n",
+    "                       ])\n",
     "else:\n",
     "    fin.FD_outputC(\"WeylScal4NRPy/src/WeylScal4NRPy.h\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=psi4r_rhs),lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=psi4i_rhs)])"
    ]
@@ -773,64 +774,16 @@
     "inherits:   admbase Boundary Grid methodoflines\n",
     "\n",
     "public:\n",
-    "CCTK_REAL NRPyPsi4r_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
+    "CCTK_REAL NRPyPsi4_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
     "{\n",
-    "  psi4r\n",
-    "} \"Psi4r_group\"\n",
+    "  psi4r, psi4i\n",
+    "} \"Psi4_group\"\n",
     "\n",
     "public:\n",
-    "CCTK_REAL NRPyPsi4i_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=-1'\n",
+    "CCTK_REAL NRPyPsi3210_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
     "{\n",
-    "  psi4i\n",
-    "} \"Psi4i_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi3r_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
-    "{\n",
-    "  psi3r\n",
-    "} \"Psi3r_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi3i_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=-1'\n",
-    "{\n",
-    "  psi3i\n",
-    "} \"Psi3i_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi2r_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
-    "{\n",
-    "  psi2r\n",
-    "} \"Psi2r_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi2i_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=-1'\n",
-    "{\n",
-    "  psi2i\n",
-    "} \"Psi2i_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi1r_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
-    "{\n",
-    "  psi1r\n",
-    "} \"Psi1r_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi1i_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=-1'\n",
-    "{\n",
-    "  psi1i\n",
-    "} \"Psi1i_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi0r_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=1'\n",
-    "{\n",
-    "  psi0r\n",
-    "} \"Psi0r_group\"\n",
-    "\n",
-    "public:\n",
-    "CCTK_REAL NRPyPsi0i_group type=GF timelevels=3 tags='tensortypealias=\"Scalar\" tensorweight=0 tensorparity=-1'\n",
-    "{\n",
-    "  psi0i\n",
-    "} \"Psi0i_group\""
+    "  psi3r,psi3i,psi2r,psi2i,psi1r,psi1i,psi0r,psi0i\n",
+    "} \"Psi3210_group\""
    ]
   },
   {
@@ -857,18 +810,6 @@
     "%%writefile WeylScal4NRPy/param.ccl\n",
     "\n",
     "restricted:\n",
-    "CCTK_INT WeylScal4NRPy_MaxNumEvolvedVars \"Number of evolved variables used by this thorn\" ACCUMULATOR-BASE=MethodofLines::MoL_Num_Evolved_Vars STEERABLE=RECOVER\n",
-    "{\n",
-    "  0:0 :: \"Number of evolved variables used by this thorn\"\n",
-    "} 0\n",
-    "\n",
-    "restricted:\n",
-    "CCTK_INT WeylScal4NRPy_MaxNumArrayEvolvedVars \"Number of Array evolved variables used by this thorn\" ACCUMULATOR-BASE=MethodofLines::MoL_Num_ArrayEvolved_Vars STEERABLE=RECOVER\n",
-    "{\n",
-    "  0:0 :: \"Number of Array evolved variables used by this thorn\"\n",
-    "} 0\n",
-    "\n",
-    "restricted:\n",
     "CCTK_INT timelevels \"Number of active timelevels\" STEERABLE=RECOVER\n",
     "{\n",
     "  0:3 :: \"\"\n",
@@ -879,12 +820,6 @@
     "{\n",
     "  *:* :: \"\"\n",
     "} 1\n",
-    "\n",
-    "restricted:\n",
-    "CCTK_INT WeylScal4NRPy_calc_offset \"WeylScal4_psi4_calc_4th_calc_offset\" STEERABLE=ALWAYS\n",
-    "{\n",
-    "  *:* :: \"\"\n",
-    "} 0\n",
     "\n",
     "private:\n",
     "CCTK_BOOLEAN output_all_psis \"Whether to output all Weyl scalars or just psi4\" \n",
@@ -915,20 +850,10 @@
    "source": [
     "%%writefile WeylScal4NRPy/schedule.ccl\n",
     "\n",
-    "STORAGE: NRPyPsi4r_group[timelevels]\n",
-    "STORAGE: NRPyPsi4i_group[timelevels]\n",
+    "STORAGE: NRPyPsi4_group[timelevels]\n",
     "if (CCTK_EQUALS(output_all_psis, true))\n",
     "{\n",
-    "    STORAGE: NRPyPsi3r_group[timelevels]\n",
-    "    STORAGE: NRPyPsi3i_group[timelevels]\n",
-    "    STORAGE: NRPyPsi2r_group[timelevels]\n",
-    "    STORAGE: NRPyPsi2i_group[timelevels]\n",
-    "    STORAGE: NRPyPsi1r_group[timelevels]\n",
-    "    STORAGE: NRPyPsi1i_group[timelevels]\n",
-    "    STORAGE: NRPyPsi0r_group[timelevels]\n",
-    "    STORAGE: NRPyPsi0i_group[timelevels]\n",
-    "    {\n",
-    "  } \"WeylScal4_psi4_calc_Nth\"\n",
+    " STORAGE: NRPyPsi3210_group[timelevels]\n",
     "}\n",
     "\n",
     "schedule group WeylScal4NRPy_group in MoL_PseudoEvolution after ADMBase_SetADMVars\n",
