Expanded documentation in the WeylScalars .py files. Minor improvements to the documentation in the WeylScalars-Cartesian tutorial. Fixed a bug the the ETK_thorn-ScalarWave tutorial.

--- a/Tutorial-WeylScalars-Cartesian.ipynb
+++ b/Tutorial-WeylScalars-Cartesian.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "## Defining the Approximate Quasi-Kinnersley Tetrad\n",
     "\n",
-    "To define the Weyl scalars, first a tetrad must be chosen. Below, for compatibility with the [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src/master/WeylScal4/), we implement the approximate  quasi-Kinnersley tetrad of the BCL paper.\n",
+    "To define the Weyl scalars, first a tetrad must be chosen. Below, for compatibility with the [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src), we implement the approximate  quasi-Kinnersley tetrad of the BCL paper.\n",
     "\n",
     "We begin with the vectors given in eqs. 5.6 and 5.7 of the BCL paper,\n",
     "\\begin{align}\n",
@@ -270,19 +270,15 @@
    "metadata": {},
    "source": [
     "## Building the Riemann and extrinsic curvature tensors\n",
-    "Now that we have the tetrad in place, we can contract it with the Weyl tensor to obtain the Weyl scalars. Naturally, we must first construct the Weyl tensor to do that. We will first build the Riemann curvature tensor,\n",
+    "Now that we have the tetrad in place, we can contract it with the Weyl tensor to obtain the Weyl scalars. Naturally, we must first construct the Weyl tensor to do that. We will first build the Christoffel symbols,\n",
     "\\begin{align}\n",
-    "R_{abcd} = \\frac{1}{2} (\\gamma_{ad,cb}+\\gamma_{bc,da}-\\gamma_{ac,bd}-\\gamma_{bd,ac}) + \\gamma_{je} \\Gamma^{j}_{bc}\\Gamma^{e}_{ad} - \\gamma_{je} \\Gamma^{j}_{bd} \\Gamma^{e}_{ac}\n",
-    "\\end{align}\n",
-    "since several terms in our expression for $\\psi_4$ are contractions of this tensor.\n",
-    "To do this, we need second derivatives of the metric tensor, $\\gamma_{ab,cd}$, using the finite differencing functionality in NRPy+. \n",
-    "\n",
-    "We also need the extrinsic curvature tensor $K_{ij}$; in the Cartesian case, we simply declared $K_{ij}$ as a gridfunction above."
+    "\\Gamma^i_{kl} &= \\frac{1}{2} \\gamma^{im} (\\gamma_{mk,l} + \\gamma_{ml,k} - \\gamma_{kl,m}), \\\\\n",
+    "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,9 +302,27 @@
     "        for l in range(DIM):\n",
     "            for m in range(DIM):\n",
     "                GammaUDD[i][k][l] += (sp.Rational(1,2))*gammaUU[i][m]*\\\n",
-    "                                     (gammaDD_dD[m][k][l] + gammaDD_dD[m][l][k] - gammaDD_dD[k][l][m])\n",
-    "\n",
-    "\n",
+    "                                     (gammaDD_dD[m][k][l] + gammaDD_dD[m][l][k] - gammaDD_dD[k][l][m])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "since we will contract them with the extrinsic curvature, and the Riemann curvature tensor,\n",
+    "\\begin{align}\n",
+    "R_{abcd} = \\frac{1}{2} (\\gamma_{ad,cb}+\\gamma_{bc,da}-\\gamma_{ac,bd}-\\gamma_{bd,ac}) + \\gamma_{je} \\Gamma^{j}_{bc}\\Gamma^{e}_{ad} - \\gamma_{je} \\Gamma^{j}_{bd} \\Gamma^{e}_{ac},\n",
+    "\\end{align}\n",
+    "since several terms in our expression for $\\psi_4$ are contractions of this tensor.\n",
+    "To do this, we need second derivatives of the metric tensor, $\\gamma_{ab,cd}$, using the finite differencing functionality in NRPy+. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 4b: Declare and construct the Riemann curvature tensor:\n",
     "gammaDD_dDD = ixp.declarerank4(\"gammaDD_dDD\",\"sym12_sym34\")\n",
     "RiemannDDDD = ixp.zerorank4()\n",
@@ -325,7 +339,23 @@
     "                        RiemannDDDD[a][b][c][d] +=  gammaDD[j][e] * GammaUDD[j][b][c] * GammaUDD[e][a][d] - \\\n",
     "                                                    gammaDD[j][e] * GammaUDD[j][b][d] * GammaUDD[e][a][c]\n",
     "\n",
-    "                        \n",
+    "                        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need the extrinsic curvature tensor $K_{ij}$; in the Cartesian case, we simply declared $K_{ij}$ as a gridfunction above. We will need the trace, which can be computed as usual: $K = \\gamma^{ij} K_{ij}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# Step 4c: We also need the extrinsic curvature tensor $K_{ij}$. This can be built from quantities from BSSN_RHSs\n",
     "# For Cartesian coordinates, we already made this a gridfunction.\n",
     "#extrinsicKDD = ixp.zerorank2()\n",
@@ -654,7 +684,17 @@
     "\n",
     "Following after the method used in the Kranc code, we will read in the already-computed values of the Weyl scalars to find the invariants instead of trying to make NRPy output a very large expression in terms of the metric and extrinsic curvature.\n",
     "\n",
-    "We will start with the invariants $I$ and $J$, as defined in equations (2.2a) and (2.2b) of [arXiv:gr-qc/0407013](https://arxiv.org/abs/gr-qc/0407013). Here, since we can work in terms of the Weyl scalars themselves, we will use SymPy's built in tools for handling complex numbers, which will not get overwhelmed as they did when computing the Weyl scalars."
+    "We will start with the invariants $I$ and $J$, as defined in equations (2.2a) and (2.2b) of [arXiv:gr-qc/0407013](https://arxiv.org/abs/gr-qc/0407013). They are\n",
+    "\\begin{align}\n",
+    "I &= 3 \\psi_2^2 - 4 \\psi_1 \\psi_3 + \\psi_4 \\psi_0 \\\\\n",
+    "J &= \n",
+    "\\begin{vmatrix}\n",
+    "\\psi_4 & \\psi_3 & \\psi_2 \\\\\n",
+    "\\psi_3 & \\psi_2 & \\psi_1 \\\\\n",
+    "\\psi_2 & \\psi_1 & \\psi_0 \\\\\n",
+    "\\end{vmatrix}\n",
+    "\\end{align}\n",
+    "Here, since we can work in terms of the Weyl scalars themselves, we will use SymPy's built in tools for handling complex numbers, which will not get overwhelmed as they did when computing the Weyl scalars."
    ]
   },
   {
@@ -690,7 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now code the invariants $J_1$, $J_2$, $J_3$, and $J_4$, as found in equations B5-B8 of [arXiv:0704.1756](https://arxiv.org/abs/0704.1756). As with the other invariants, we will simply read in the values of the gridfunctions that the already calculated (that is, the Weyl scalars). These equations are based directly on those used in the Mathematica notebook that generates $\\text{WeylScal4}$ (available at [this](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src) repository,, modified so that Python can interpret them. Those equations were generated in turn using $\\text{xTensor}$ from equations B5-B8."
+    "We will now code the invariants $J_1$, $J_2$, $J_3$, and $J_4$, as found in equations B5-B8 of [arXiv:0704.1756](https://arxiv.org/abs/0704.1756). As with the other invariants, we will simply read in the values of the gridfunctions that the already calculated (that is, the Weyl scalars). These equations are based directly on those used in the Mathematica notebook that generates $\\text{WeylScal4}$ (available at [this](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src) repository), modified so that Python can interpret them. Those equations were generated in turn using $\\text{xTensor}$ from equations B5-B8."
    ]
   },
   {
