WaveToyNRPy/IDScalarWaveNRPy tut: Improve wording

--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -44,8 +44,7 @@
     "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
     "\n",
     "# Step 1c: Call the InitialData_PlaneWave() function from within the\n",
-    "#         ScalarWave/InitialData_PlaneWave.py module,\n",
-    "#         which should do exactly the same as in Steps 1-5 above.\n",
+    "#          ScalarWave/InitialData_PlaneWave.py module.\n",
     "import ScalarWave.InitialData_PlaneWave as swid\n",
     "\n",
     "# Step 2: Within the ETK, the 3D gridfunctions x, y, and z store the\n",
@@ -69,11 +68,7 @@
     "uu = swid.uu_ID\n",
     "vv = swid.vv_ID\n",
     "\n",
-    "# Step 6: Create directories for the thorn if they don't exist.\n",
-    "!mkdir IDScalarWaveNRPy     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "!mkdir IDScalarWaveNRPy/src 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "\n",
-    "# Step 7: Create the C code output kernel.\n",
+    "# Step 6: Create the C code output kernel.\n",
     "scalar_PWID_to_print = [\\\n",
     "                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"uu\"),rhs=uu),\\\n",
     "                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"vv\"),rhs=vv),]\n",
@@ -82,6 +77,10 @@
     "scalar_PWID_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"1\",\"1\",\"1\"],[\"cctk_lsh[2]-1\",\"cctk_lsh[1]-1\",\"cctk_lsh[0]-1\"],\\\n",
     "                               [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
     "                               scalar_PWID_CcodeKernel.replace(\"time\",\"cctk_time\"))\n",
+    "\n",
+    "# Step 7: Create directories for the thorn if they don't exist.\n",
+    "!mkdir IDScalarWaveNRPy     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
+    "!mkdir IDScalarWaveNRPy/src 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
     "\n",
     "# Step 8: Write the C code kernel to file.\n",
     "with open(\"IDScalarWaveNRPy/src/ScalarWave_PWID.h\", \"w\") as file:\n",
@@ -259,9 +258,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2c: Tell the Einstein Toolkit to compile the C code.\n",
+    "#### Step 2c: Add the C code to the Einstein Toolkit compilation list.\n",
     "\n",
-    "We will also need $\\text{make.code.defn}$, which states which files need to be compiled. This thorn only has the one C file to compile so far."
+    "We will also need $\\text{make.code.defn}$, which indicates the list of files that need to be compiled. This thorn only has the one C file to compile."
    ]
   },
   {
